support/kubernetes/configs/evolutionAPI/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: src-evolutionapi
spec:
  selector:
    app: evolutionapi
  ports:
  - port: 8080
    targetPort: 8080
