support/kubernetes/configs/evolutionAPI/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-evolutionapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
  - host: evolution.localtourapp.com.br 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: src-evolutionapi
            port:
              name: 8080
  tls:
  - hosts:
    - evolution.localtourapp.com.br 
    secretName: evolution.localtourapp.com.br-tls
